--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.2",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@types/express": "^4.17.0",
     "@types/history": "^4.7.2",
     "@types/jest": "^26.0.0",
