--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "omit.js": "^2.0.2",
     "react": "^17.0.0",
     "react-big-calendar": "^0.35.0",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-fittext": "^1.0.0",
