--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "umi build",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start:dev",
+    "push-rsync": "rsync -avzhe ssh --delete-before dist/ ubuntu@203.162.10.120:/var/www/ketnoi.pttc1.edu.vn/",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
