--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "react-dom": "^17.0.0",
     "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router": "^4.3.1",
+    "tinymce": "^5.10.0",
     "umi": "^3.5.0",
     "umi-plugin-setting-drawer": "^1.0.3",
     "umi-serve": "^1.9.10"
