--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.0.4",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router": "^4.3.1",
     "tinymce": "^5.10.0",
     "umi": "^3.5.0",
