--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "lodash-decorators": "^6.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "nanoid": "^3.1.30",
     "numeral": "^2.0.6",
     "nzh": "^1.0.3",
     "omit.js": "^2.0.2",
     "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.35.0",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dev-inspector": "^1.1.1",
@@ -99,6 +101,7 @@
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.144",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-big-calendar": "^0.33.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
