--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "gg-editor": "^2.0.2",
+    "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "lodash-decorators": "^6.0.0",
     "moment": "^2.29.1",
