--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
+    "react-facebook-login": "^4.1.1",
     "react-fittext": "^1.0.0",
+    "react-google-login": "^5.2.2",
     "react-helmet-async": "^1.0.4",
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^9.0.0-beta.4",
@@ -105,6 +107,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-big-calendar": "^0.33.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-facebook-login": "^4.1.4",
     "@types/react-helmet": "^6.1.0",
     "@umijs/fabric": "^2.6.2",
     "@umijs/openapi": "^1.1.14",
