--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^9.0.0-beta.4",
     "react-router": "^4.3.1",
+    "react-stickynode": "^4.0.0",
     "styled-components": "^5.3.3",
     "tinymce": "^5.10.0",
     "umi": "^3.5.0",
@@ -110,6 +111,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-facebook-login": "^4.1.4",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-stickynode": "^4.0.0",
     "@types/styled-components": "^5.1.22",
     "@umijs/fabric": "^2.6.2",
     "@umijs/openapi": "^1.1.14",
