--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "bizcharts": "^3.5.3-beta.0",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
+    "eslint-plugin-react": "^7.29.4",
     "gg-editor": "^2.0.2",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
@@ -121,7 +122,7 @@
     "@umijs/plugin-esbuild": "^1.0.1",
     "@umijs/plugin-openapi": "^1.2.0",
     "@umijs/preset-ant-design-pro": "^1.2.0",
-    "@umijs/preset-dumi": "^1.1.7",
+    "@umijs/preset-dumi": "^1.1.40",
     "@umijs/preset-react": "^1.7.4",
     "@umijs/yorkie": "^2.0.3",
     "carlo": "^0.9.46",
