--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-google-login": "^5.2.2",
     "react-helmet-async": "^1.0.4",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-onesignal": "^2.0.3",
     "react-responsive": "^9.0.0-beta.4",
     "react-router": "^4.3.1",
     "react-stickynode": "^4.0.0",
