--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
     "js-file-download": "^0.4.12",
+    "jwt-decode": "^3.1.2",
     "keycloak-js": "^16.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -74,6 +75,7 @@
     "nanoid": "^3.1.30",
     "now": "^21.0.1",
     "numeral": "^2.0.6",
+    "oidc-client-ts": "^2.2.3",
     "path": "^0.12.7",
     "react": "^17.0.0",
     "react-apexcharts": "^1.4.0",
@@ -85,6 +87,7 @@
     "react-helmet-async": "^1.0.4",
     "react-highlight-words": "^0.18.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-oidc-context": "^2.2.2",
     "react-onesignal": "^2.0.4",
     "react-pdf": "^5.6.0",
     "react-recaptcha": "^2.3.10",
