Add Countup, fix Donut chart

--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
   "dependencies": {
     "@ant-design/icons": "~4.5.0",
     "@ant-design/pro-layout": "~6.15.3",
-    "@react-keycloak/web": "^3.4.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/react-highlight-words": "^0.16.4",
@@ -63,15 +62,10 @@
     "apexcharts": "^3.37.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "device-uuid": "^1.0.4",
-    "highcharts": "^10.2.0",
-    "highcharts-react-official": "^3.1.0",
     "js-file-download": "^0.4.12",
-    "keycloak-js": "^16.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "now": "^21.0.1",
     "numeral": "^2.0.6",
     "oidc-client-ts": "^2.2.3",
     "path": "^0.12.7",
@@ -79,7 +73,7 @@
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.35.0",
-    "react-custom-scrollbars-2": "^4.4.0",
+    "react-countup": "^6.4.2",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
@@ -98,7 +92,6 @@
     "tinymce": "^5.10.0",
     "umi": "~3.5.0",
     "umi-serve": "~1.9.10",
-    "uuid": "^8.3.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
