--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-recaptcha-google": "^1.1.1",
     "react-responsive": "^9.0.0-beta.4",
     "react-router": "^4.3.1",
+    "react-sortable-hoc": "^2.0.0",
     "react-to-print": "^2.14.7",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
