--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "umi build",
+    "build": "umi build && yarn run sentry:sourcemaps",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start:dev",
     "push-rsync": "rsync -avzhe ssh --delete-before dist/ ubuntu@203.162.10.113:/var/www/slink.ptit.edu.vn/",
@@ -35,7 +35,8 @@
     "test:component": "umi test ./src/components",
     "serve": "umi-serve",
     "tsc": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org aisoft --project sentry-vwa build && sentry-cli --url https://sentry.aisoftech.vn/ sourcemaps upload --org aisoft --project sentry-vwa build"
   },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
@@ -52,6 +53,7 @@
   "dependencies": {
     "@ant-design/icons": "~4.5.0",
     "@ant-design/pro-layout": "~6.15.3",
+    "@sentry/react": "^7.65.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/react-highlight-words": "^0.16.4",
