--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "umi build && yarn run sentry:sourcemaps",
+    "build": "umi build",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start:dev",
     "push-rsync": "rsync -avzhe ssh --delete-before dist/ ubuntu@203.162.10.113:/var/www/slink.ptit.edu.vn/",
