--- a/.env
+++ b/.env
@@ -1,34 +1,34 @@
-APP_CONFIG_IP_ROOT=https://ais.aisenote.com/dev/
+APP_CONFIG_IP_ROOT=https://gw.ript.vn/
 APP_CONFIG_IP_GLOBAL=https://ais2.aisenote.com/qldt-internal-api
-APP_CONFIG_PRIMARY_COLOR=#b31820
+APP_CONFIG_PRIMARY_COLOR=#CC0D00
 APP_CONFIG_ONE_SIGNAL_ID=f3857a81-2891-49be-87a7-903a4a1a54be
-APP_CONFIG_SENTRY_DSN=https://ed934e521d476c44a89a42aaa8a6993a@sentry.aisoftech.vn/3
-APP_CONFIG_KEYCLOAK_AUTHORITY=https://ais.aisenote.com/dev/keycloak/realms/vwa
-APP_CONFIG_KEYCLOAK_TOKEN_ENDPOINT_ID=https://ais.aisenote.com/dev/keycloak/realms/vwa/protocol/openid-connect/token
-APP_CONFIG_PREFIX_OF_KEYCLOAK_CLIENT_ID=vwa-
+APP_CONFIG_SENTRY_DSN=https://75869bc5882ff3efdc90da60fc2e9e10@sentry.aisoftech.vn/7
+APP_CONFIG_KEYCLOAK_AUTHORITY=https://sso.ript.vn/realms/ript
+APP_CONFIG_KEYCLOAK_TOKEN_ENDPOINT_ID=https://sso.ript.vn/realms/ript/protocol/openid-connect/token
+APP_CONFIG_PREFIX_OF_KEYCLOAK_CLIENT_ID=ript-
 
-APP_CONFIG_CO_QUAN_CHU_QUAN=Hội Liên hiệp phụ nữ Việt Nam
-APP_CONFIG_TEN_TRUONG=Học viện Phụ nữ Việt Nam
-APP_CONFIG_TIEN_TO_TRUONG=Học viện
-APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH=VWA
+APP_CONFIG_CO_QUAN_CHU_QUAN='HỌC VIỆN CÔNG NGHỆ BƯU CHÍNH VIỄN THÔNG'
+APP_CONFIG_TEN_TRUONG='VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN'
+APP_CONFIG_TIEN_TO_TRUONG='Học viện'
+APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH=RIPT
 
-APP_CONFIG_URL_LANDING=http://portal-vwa.aisenote.com/
-APP_CONFIG_URL_CONNECT=https://vwa-connect-dev.vercel.app/
-APP_CONFIG_URL_CAN_BO=https://cong-can-bo-vwa-dev.vercel.app/
-APP_CONFIG_URL_DAO_TAO=https://qldt-vwa-dev.vercel.app/
-APP_CONFIG_URL_NHAN_SU=https://tcns-vwa-dev.vercel.app/
-APP_CONFIG_URL_TAI_CHINH=https://tai-chinh-vwa-dev.vercel.app/
-APP_CONFIG_URL_CTSV=https://ctsv-vwa-dev.vercel.app/
-APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
-APP_CONFIG_URL_VPS=https://van-phong-so-vwa-dev.vercel.app/
-APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
+APP_CONFIG_URL_LANDING=https://ript.vn/
+APP_CONFIG_URL_CONNECT=https://slink.ript.vn/
+APP_CONFIG_URL_CAN_BO=https://canbo.ript.vn/
+APP_CONFIG_URL_DAO_TAO=https://daotao.ript.vn/
+APP_CONFIG_URL_NHAN_SU=https://nhansu.ript.vn/
+APP_CONFIG_URL_TAI_CHINH=https://thanhtoan.ript.vn/
+APP_CONFIG_URL_CTSV=https://ctsv.ript.vn/
+APP_CONFIG_URL_QLKH=
+APP_CONFIG_URL_VPS=
+APP_CONFIG_URL_CORE=https://core.ript.vn/
 
-APP_CONFIG_TITLE_CONNECT=Cổng người học
-APP_CONFIG_TITLE_CAN_BO=Cổng cán bộ
-APP_CONFIG_TITLE_DAO_TAO=Quản lý đào tạo
-APP_CONFIG_TITLE_NHAN_SU=Tổ chức nhân sự
-APP_CONFIG_TITLE_TAI_CHINH=Tài chính
-APP_CONFIG_TITLE_CTSV=Công tác sinh viên
-APP_CONFIG_TITLE_QLKH=Quản lý khoa học
-APP_CONFIG_TITLE_VPS=Văn phòng số
-APP_CONFIG_TITLE_CORE=Danh mục chung
+APP_CONFIG_TITLE_CONNECT='Slink'
+APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
+APP_CONFIG_TITLE_DAO_TAO='Quản lý đào tạo'
+APP_CONFIG_TITLE_NHAN_SU='Tổ chức nhân sự'
+APP_CONFIG_TITLE_TAI_CHINH='Thanh toán'
+APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
+APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
+APP_CONFIG_TITLE_VPS='Văn phòng số'
+APP_CONFIG_TITLE_CORE='Danh mục chung'
