--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ APP_CONFIG_KEYCLOAK_AUTHORITY=https://sso.ript.vn/realms/ript
 APP_CONFIG_KEYCLOAK_TOKEN_ENDPOINT_ID=https://sso.ript.vn/realms/ript/protocol/openid-connect/token
 APP_CONFIG_PREFIX_OF_KEYCLOAK_CLIENT_ID=ript-
 
-APP_CONFIG_CO_QUAN_CHU_QUAN=HỌC VIỆN CÔNG NGHỆ BƯU CHÍNH VIỄN THÔNG
-APP_CONFIG_TEN_TRUONG=VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN
-APP_CONFIG_TIEN_TO_TRUONG=Học viện
+APP_CONFIG_CO_QUAN_CHU_QUAN='HỌC VIỆN CÔNG NGHỆ BƯU CHÍNH VIỄN THÔNG'
+APP_CONFIG_TEN_TRUONG='VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN'
+APP_CONFIG_TIEN_TO_TRUONG='Học viện'
 APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH=RIPT
 
 APP_CONFIG_URL_LANDING=https://ript.vn/
@@ -23,12 +23,12 @@ APP_CONFIG_URL_QLKH=
 APP_CONFIG_URL_VPS=
 APP_CONFIG_URL_CORE=https://core.ript.vn/
 
-APP_CONFIG_TITLE_CONNECT=Slink
-APP_CONFIG_TITLE_CAN_BO=Cổng cán bộ
-APP_CONFIG_TITLE_DAO_TAO=Quản lý đào tạo
-APP_CONFIG_TITLE_NHAN_SU=Tổ chức nhân sự
-APP_CONFIG_TITLE_TAI_CHINH=Thanh toán
-APP_CONFIG_TITLE_CTSV=Công tác sinh viên
-APP_CONFIG_TITLE_QLKH=Quản lý khoa học
-APP_CONFIG_TITLE_VPS=Văn phòng số
-APP_CONFIG_TITLE_CORE=Danh mục chung
+APP_CONFIG_TITLE_CONNECT='Slink'
+APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
+APP_CONFIG_TITLE_DAO_TAO='Quản lý đào tạo'
+APP_CONFIG_TITLE_NHAN_SU='Tổ chức nhân sự'
+APP_CONFIG_TITLE_TAI_CHINH='Thanh toán'
+APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
+APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
+APP_CONFIG_TITLE_VPS='Văn phòng số'
+APP_CONFIG_TITLE_CORE='Danh mục chung'
