--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ APP_CONFIG_KEYCLOAK_AUTHORITY=https://ais.aisenote.com/dev/keycloak/realms/vwa
 APP_CONFIG_KEYCLOAK_TOKEN_ENDPOINT_ID=https://ais.aisenote.com/dev/keycloak/realms/vwa/protocol/openid-connect/token
 APP_CONFIG_PREFIX_OF_KEYCLOAK_CLIENT_ID=vwa-
 
-APP_CONFIG_CO_QUAN_CHU_QUAN=Hội Liên hiệp phụ nữ Việt Nam
-APP_CONFIG_TEN_TRUONG=Học viện Phụ nữ Việt Nam
-APP_CONFIG_TIEN_TO_TRUONG=Học viện
+APP_CONFIG_CO_QUAN_CHU_QUAN='Hội Liên hiệp phụ nữ Việt Nam'
+APP_CONFIG_TEN_TRUONG='Học viện Phụ nữ Việt Nam'
+APP_CONFIG_TIEN_TO_TRUONG='Học viện'
 APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH=VWA
 
 APP_CONFIG_URL_LANDING=http://portal-vwa.aisenote.com/
@@ -23,12 +23,12 @@ APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
 APP_CONFIG_URL_VPS=https://van-phong-so-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
 
-APP_CONFIG_TITLE_CONNECT=Cổng người học
-APP_CONFIG_TITLE_CAN_BO=Cổng cán bộ
-APP_CONFIG_TITLE_DAO_TAO=Quản lý đào tạo
-APP_CONFIG_TITLE_NHAN_SU=Tổ chức nhân sự
-APP_CONFIG_TITLE_TAI_CHINH=Tài chính
-APP_CONFIG_TITLE_CTSV=Công tác sinh viên
-APP_CONFIG_TITLE_QLKH=Quản lý khoa học
-APP_CONFIG_TITLE_VPS=Văn phòng số
-APP_CONFIG_TITLE_CORE=Danh mục chung
+APP_CONFIG_TITLE_CONNECT='Cổng người học'
+APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
+APP_CONFIG_TITLE_DAO_TAO='Quản lý đào tạo'
+APP_CONFIG_TITLE_NHAN_SU='Tổ chức nhân sự'
+APP_CONFIG_TITLE_TAI_CHINH='Tài chính'
+APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
+APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
+APP_CONFIG_TITLE_VPS='Văn phòng số'
+APP_CONFIG_TITLE_CORE='Danh mục chung'
