--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ APP_CONFIG_URL_NHAN_SU=https://tcns-vwa-dev.vercel.app/
 APP_CONFIG_URL_TAI_CHINH=https://tai-chinh-vwa-dev.vercel.app/
 APP_CONFIG_URL_CTSV=https://ctsv-vwa-dev.vercel.app/
 APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
-APP_CONFIG_URL_VPS=https://van-phong-so-vwa-dev.vercel.app/
+APP_CONFIG_URL_VPS=https://van-phong-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
 
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
@@ -30,5 +30,5 @@ APP_CONFIG_TITLE_NHAN_SU='Tổ chức nhân sự'
 APP_CONFIG_TITLE_TAI_CHINH='Tài chính'
 APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
 APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
-APP_CONFIG_TITLE_VPS='Văn phòng số'
+APP_CONFIG_TITLE_VPS='Văn phòng điện tử'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
