--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_CONFIG_ONE_SIGNAL_ID=f3857a81-2891-49be-87a7-903a4a1a54be
 APP_CONFIG_SENTRY_DSN=https://ed934e521d476c44a89a42aaa8a6993a@sentry.aisoftech.vn/3
 APP_CONFIG_KEYCLOAK_AUTHORITY=https://ais.aisenote.com/dev/keycloak/realms/vwa
 APP_CONFIG_PREFIX_OF_KEYCLOAK_CLIENT_ID=vwa-
-APP_CONFIG_APP_VERSION=231019
+APP_CONFIG_APP_VERSION=231024
 
 APP_CONFIG_CO_QUAN_CHU_QUAN='Hội Liên hiệp phụ nữ Việt Nam'
 APP_CONFIG_TEN_TRUONG='Học viện Phụ nữ Việt Nam'
@@ -29,5 +29,5 @@ APP_CONFIG_TITLE_NHAN_SU='Tổ chức nhân sự'
 APP_CONFIG_TITLE_TAI_CHINH='Tài chính'
 APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
 APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
-APP_CONFIG_TITLE_VPS='Văn phòng điện tử'
+APP_CONFIG_TITLE_VPS='Văn phòng điều hành'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
