Module: Thêm khảo thí

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_CONFIG_URL_TAI_CHINH=https://tai-chinh-vwa-dev.vercel.app/
 APP_CONFIG_URL_CTSV=https://ctsv-vwa-dev.vercel.app/
 APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
 APP_CONFIG_URL_VPS=https://van-phong-vwa-dev.vercel.app/
+APP_CONFIG_URL_KHAO_THI=https://khao-thi-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
 
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
@@ -30,4 +31,5 @@ APP_CONFIG_TITLE_TAI_CHINH='Tài chính'
 APP_CONFIG_TITLE_CTSV='Công tác sinh viên'
 APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
 APP_CONFIG_TITLE_VPS='Văn phòng điều hành'
+APP_CONFIG_TITLE_KHAO_THI='Khảo thí'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
