Module: Bổ sung phân hệ Cơ sở vật chất

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ APP_CONFIG_TIEN_TO_TRUONG='Học viện'
 APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH=VWA
 APP_CONFIG_PRIMARY_COLOR=#007EB9
 
-APP_CONFIG_URL_LANDING=https://portal.hvpnvn.edu.vn/
+APP_CONFIG_URL_LANDING=https://hvpnvn.edu.vn/
 APP_CONFIG_URL_CONNECT=https://vwa-connect-dev.vercel.app/
 APP_CONFIG_URL_CAN_BO=https://cong-can-bo-vwa-dev.vercel.app/
 APP_CONFIG_URL_DAO_TAO=https://qldt-vwa-dev.vercel.app/
@@ -22,6 +22,7 @@ APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
 APP_CONFIG_URL_VPS=https://van-phong-vwa-dev.vercel.app/
 APP_CONFIG_URL_KHAO_THI=https://khao-thi-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
+APP_CONFIG_URL_CSVC=
 
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
 APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
@@ -33,3 +34,4 @@ APP_CONFIG_TITLE_QLKH='Quản lý khoa học'
 APP_CONFIG_TITLE_VPS='Văn phòng điều hành'
 APP_CONFIG_TITLE_KHAO_THI='Khảo thí'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
+APP_CONFIG_TITLE_CSVC='Cơ sở vật chất'
