Add thư viện module

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ APP_CONFIG_URL_VPS=https://van-phong-vwa-dev.vercel.app/
 APP_CONFIG_URL_KHAO_THI=https://khao-thi-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
 APP_CONFIG_URL_CSVC=
+APP_CONFIG_URL_THU_VIEN=https://thuvien.hvpnvn.edu.vn/
 
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
 APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
@@ -35,3 +36,4 @@ APP_CONFIG_TITLE_VPS='Văn phòng điều hành'
 APP_CONFIG_TITLE_KHAO_THI='Khảo thí'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
 APP_CONFIG_TITLE_CSVC='Cơ sở vật chất'
+APP_CONFIG_TITLE_THU_VIEN='Thư viện'
