Module: Thêm quản lý văn bản

--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ APP_CONFIG_URL_KHAO_THI=https://khao-thi-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
 APP_CONFIG_URL_CSVC=
 APP_CONFIG_URL_THU_VIEN=https://thuvien.hvpnvn.edu.vn/
+APP_CONFIG_URL_QLVB=https://sso.hvpnvn.edu.vn/realms/vwa/protocol/openid-connect/auth?response_type=token&client_id=vwa-odoo-qlvb&redirect_uri=http%3A%2F%2Fqlvb.hvpnvn.edu.vn%2Fauth_oauth%2Fsignin&scope=profile+openid+email&state=%7B%22d%22%3A+%22qlvb1%22%2C+%22p%22%3A+4%2C+%22r%22%3A+%22http%253A%252F%252Fqlvb.hvpnvn.edu.vn%252Fweb%22%7D
 
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
 APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
@@ -37,3 +38,4 @@ APP_CONFIG_TITLE_KHAO_THI='Khảo thí'
 APP_CONFIG_TITLE_CORE='Danh mục chung'
 APP_CONFIG_TITLE_CSVC='Cơ sở vật chất'
 APP_CONFIG_TITLE_THU_VIEN='Thư viện'
+APP_CONFIG_TITLE_QLVB='Quản lý văn bản'
