--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ APP_CONFIG_URL_QLKH=https://qlkh-vwa-dev.vercel.app/
 APP_CONFIG_URL_VPS=https://van-phong-vwa-dev.vercel.app/
 APP_CONFIG_URL_KHAO_THI=https://khao-thi-vwa-dev.vercel.app/
 APP_CONFIG_URL_CORE=https://core-vwa-dev.vercel.app/
-APP_CONFIG_URL_CSVC=
+APP_CONFIG_URL_CSVC=https://cosovatchat-vwa.vercel.app/
 APP_CONFIG_URL_THU_VIEN=https://thuvien.hvpnvn.edu.vn/
 APP_CONFIG_URL_QLVB=https://sso.hvpnvn.edu.vn/realms/vwa/protocol/openid-connect/auth?response_type=token&client_id=vwa-odoo-qlvb&redirect_uri=http%3A%2F%2Fqlvb.hvpnvn.edu.vn%2Fauth_oauth%2Fsignin&scope=profile+openid+email&state=%7B%22d%22%3A+%22qlvb1%22%2C+%22p%22%3A+4%2C+%22r%22%3A+%22http%253A%252F%252Fqlvb.hvpnvn.edu.vn%252Fweb%22%7D
 
