--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ APP_CONFIG_URL_CSVC=https://cosovatchat-vwa.vercel.app/
 APP_CONFIG_URL_THU_VIEN=https://thuvien.hvpnvn.edu.vn/
 APP_CONFIG_URL_QLVB=https://sso.hvpnvn.edu.vn/realms/vwa/protocol/openid-connect/auth?response_type=token&client_id=vwa-odoo-qlvb&redirect_uri=http%3A%2F%2Fqlvb.hvpnvn.edu.vn%2Fauth_oauth%2Fsignin&scope=profile+openid+email&state=%7B%22d%22%3A+%22qlvb1%22%2C+%22p%22%3A+4%2C+%22r%22%3A+%22http%253A%252F%252Fqlvb.hvpnvn.edu.vn%252Fweb%22%7D
 
+APP_CONFIG_TITLE_LANDING='Cổng thông tin'
 APP_CONFIG_TITLE_CONNECT='Cổng người học'
 APP_CONFIG_TITLE_CAN_BO='Cổng cán bộ'
 APP_CONFIG_TITLE_DAO_TAO='Quản lý đào tạo'
